<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_heading"
            android:fontFamily="@font/poppins_extrabold"
            android:textColor="@color/primaryColor"
            android:textSize="30sp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edittext_border"
            android:textColor="#000"
            android:textColorHint="#666" />

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edittext_border"
            android:textColor="#000"
            android:textColorHint="#666" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="24dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/edittext_border"
                android:textColor="#000"
                android:textColorHint="#666"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="24dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/edittext_border"
                android:textColor="#000"
                android:textColorHint="#666"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvSignInInstead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="94dp"
            android:text="@string/sign_in_instead"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/primaryColor"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="#000"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"
            app:cornerRadius="15dp" />

    </LinearLayout>
</ScrollView>
