<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#DADADA">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="32dp"
            android:text="Register lender"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/companyname"
            android:hint="Company name"
            android:inputType="text"
            android:textSize="18sp"
            android:background="@drawable/edittext_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:padding="18dp"
            android:textColor="#000"
            android:textColorHint="#666" />

        <EditText
            android:id="@+id/license"
            android:hint="License no"
            android:inputType="phone"
            android:textSize="18sp"
            android:background="@drawable/edittext_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:padding="18dp"
            android:textColor="#000"
            android:textColorHint="#666" />

        <EditText
            android:id="@+id/email"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:background="@drawable/edittext_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:padding="18dp"
            android:textColor="#000"
            android:textColorHint="#666" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:padding="18dp"
                android:background="@drawable/edittext_border" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:padding="18dp"
                android:background="@drawable/edittext_border" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="104dp"
            android:text="Authenticate"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#F7931E"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

    </LinearLayout>
</ScrollView>
